# coreWar-optimizer

./: CMakeLists.txt  README.md  benchmark_test.py  main.cpp
pmars/: output.txt
pmars/src/: Makefile  battle_output.txt  pmars
pmars/warriors/: warrior_1.red  warrior_2.red
warriors/benchmark/: CANNON.RED  IRONGATE.RED  MARCIA13.RED  NOBODY.RED  PAPERONE.RED  RAVE.RED  THERMITE.RED  TIME.RED  TORNADO.RED
